@@ -1,8 +1,4 @@
 /*------------------------------GLOBAL------------------------------*/
-body {
-    font-weight: 300;
-}
-
 a {
     color: white;
     font-size: 1.1em;
@@ -12,22 +8,21 @@ a {
 /*----------------------------TOP-NAV-BAR---------------------------*/
 #top-nav {
     box-sizing: border-box;
+    position: fixed;
     width: 100vw;
-    height: 17.5vw;
+    height: 15.5vw;
     color: #374047;
     background-color: #374047;
-    padding-top: 1vh;
+    padding-top: 1.5vh;
     padding-bottom: 1vh;
 }
 
 #profile-options {
     box-sizing: border-box;
     float: right;
-    font-size: 2em;
-    padding-bottom: 1vw;
-    padding-left: 3vw;
-    padding-right: 3vw;
-    margin: 1vw 3vw;
+    font-size: 1.5em;
+    padding: 1vw 2.5vw 1vw 2.5vw;
+    margin: 0vw 5vw;
     border: 1px solid white;
     border-radius: 5px;
     color: white;
@@ -35,11 +30,11 @@ a {
 
 #navbar-username {
     box-sizing: border-box;
-    float: right;
-    line-height: 15vw;
+    float: left;
+    line-height: 10vw;
     padding-right: 1vw;
     padding-left: 1vw;
-    font-size: 1.2em;
+    font-size: 1.1em;
     letter-spacing: 1px;
     color: white;
 }
@@ -47,20 +42,16 @@ a {
 #user-dp {
     box-sizing: border-box;
     padding: 0;
-    float: right;
-    border-radius: 50%;
-    background-color: rgb(248, 248, 248);
-    border: 1px solid rgb(248, 248, 248);
-    width: 12vw;
-    height: 12vw;
-    overflow: hidden;
-    text-align: center;
+    float: left;
 }
-
 #user-dp img {
     border-radius: 50%;
-    width: 12vw;
-    height: 12vw;
+    background-color: rgb(248, 248, 248);
+    border: 2px solid rgb(248, 248, 248);
+    max-width: 8vw;
+    max-height: 5vh;
+    overflow: hidden;
+    margin: 0vh 0vw 0vw 2vw;
 }
 
 /*------------------------------SIDE-NAV-----------------------------*/
@@ -179,6 +170,7 @@ a {
     padding: 5vw 0vw;
     border-bottom: 1px solid #374047;
     font-size: 0.8em;
+    padding-top: 20.5vw;
 }
 
 h1 {
@@ -202,11 +194,11 @@ h1 {
 }
 
 #search-case {
-    border-radius: 5px;
-    box-shadow: 10px 10px 20px #BBB;
+    /*border-radius: 5px;*/
+    box-shadow: 0px 0px 30px 1px #BBB;
 }
 
-input[type="search"] {
+#search-case-input {
     box-sizing: border-box;
     padding: 4vw;
     background-image: url('/img/search-1.png');
@@ -217,20 +209,28 @@ input[type="search"] {
     font-size: 1em;
     width: 85vw;
     border-bottom-left-radius: 0;
-    border-bottom-right-radius: 0;
+    border-bottom-right-radius: 0;/*
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;*/
     border-bottom: none;
-    background-color: #1fc8db;
+    background-color: #b9ccc4;
     color: white;
 }
 
-input[type="search"]:focus {
+#search-case-input:focus {
     border: none;
 }
 
-input[type="search"]::placeholder {
-    color: white;
+#search-case-input::placeholder {
+    color: #333;
     letter-spacing: 1px;
-    opacity: 0.9;
+    font-size: 1.1em;
+}
+
+#search-case-input:focus::placeholder {
+    color: #333;
+    opacity: 0.5;
+    transition: opacity 0.5s ease-in-out;
 }
 
 #results-tab-div {
@@ -240,7 +240,6 @@ input[type="search"]::placeholder {
     display: flex;
     justify-content: space-around;
     border-top: none;
-    border-bottom: 3px solid #1fc8db;
 }
 
 #results-tab-div span {
@@ -309,27 +308,26 @@ input[type="search"]::placeholder {
 }
 
 .accept-case-shadow {
-    border-radius: 5px;
-    box-shadow: 10px 10px 20px #BBB;
+    /*border-radius: 5px;*/
+    box-shadow: 0px 0px 30px 1px #BBB;
 }
 
 #heading-accept-case {
     box-sizing: border-box;
     border: 1px solid #CCC;
-    border-radius: 5px;
+    /*border-radius: 5px;*/
     border-bottom-left-radius: 0;
     border-bottom-right-radius: 0;
     padding: 3vw;
-    background-color: #1fc8db;
-    color: white;
+    background-color: #b9ccc4;
     font-size: 1em;
     letter-spacing: 1px;
-    font-weight: 400;
+    font-weight: 700;
 }
 
 #case-details {
     border: 1px solid #CCC;
-    border-radius: 5px;
+    /*border-radius: 5px;*/
     border-top-left-radius: 0;
     border-top-right-radius: 0;
     padding: 5vw;
